bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:2: error: not found: value aSmile
var A = (!aSmile && bSmile)
          ^MonkeyTrouble:2: error: not found: value bSmile
var A = (!aSmile && bSmile)
                    ^MonkeyTrouble:3: error: not found: value aSmile
var B = (aSmile && !bSmile)
         ^MonkeyTrouble:3: error: not found: value bSmile
var B = (aSmile && !bSmile)
                    ^